fixer test epsilon

--- a/gauss seidel.ipynb
+++ b/gauss seidel.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0]\n",
-      "[1.0, 0.8, 0.39999999999999997]\n"
+      "x [-0.2, 0.15555555555555556, -0.5079365079365079]\n",
+      "x [0.16698412698412696, 0.33432098765432094, -0.42862181909800956]\n",
+      "x [0.19090148652053412, 0.3334806976288458, -0.4216682463696825]\n",
+      "x [0.18639322687334783, 0.33120532522108065, -0.4226312673534835]\n",
+      "x [0.18606089050052235, 0.3312015487616723, -0.4227256811086611]\n"
      ]
     }
    ],
@@ -19,9 +22,9 @@
     "# as A matrix, Solution and B matrix\n",
     "   \n",
     "def seidel(a, x ,b):\n",
-    "    #Finding length of a(3)       \n",
+    "    #Finding length of a      \n",
     "    n = len(a)              \n",
-    "    # for loop for 3 times as to calculate x, y , z\n",
+    "    # for loop for n times as to calculate x, y , z\n",
     "    for j in range(n):        \n",
     "        # temp variable d to store b[j]\n",
     "        d = b[j]                  \n",
@@ -36,13 +39,13 @@
     "    return x    \n",
     "   \n",
     "# int(input())input as number of variable to be solved                \n",
-    "n = int(input(\"Donner nombre des variables\"))  \n",
+    "#n = int(input(\"Donner nombre des variables\"))  \n",
     "a = []                            \n",
     "b = []\n",
     "x = []   \n",
     "epsilon = float(input(\"Donner l'epsilon\"))\n",
     "test=True\n",
-    "for i in range(n):\n",
+    "\"\"\"for i in range(n):\n",
     "    l=[]\n",
     "    for j in range(n):\n",
     "        l.append(int(input(\"Donner A{}{}\".format(i,j))))\n",
@@ -51,26 +54,27 @@
     "    b.append(int(input(\"Donner b{}\".format(i))))\n",
     "    #b[i]=int(input(\"Donner b{}\".format(i)))\n",
     "    x.append(0)\n",
-    "print(x)\n",
+    "print(x)\"\"\"\n",
     "# initial solution depending on n(here n=3)                     \n",
-    "\"\"\"\n",
-    "dummy data\n",
-    "x = [0, 0, 0,0]                        \n",
-    "a = [[4, 1, 2],[3, 5, 1],[1, 1, 3]]\n",
-    "b = [4,7,3]\n",
-    "\"\"\"\n",
-    "  \n",
+    "import copy\n",
+    "#dummy data\n",
+    "n=3\n",
+    "x = [0.0, 0.0, 0.0]                         \n",
+    "a = [[5, -2, 3],[-3, 9, 1],[2, -1, -7]]\n",
+    "b = [-1,2,3]\n",
+    "x1 = [0.0, 0.0, 0.0]\n",
     "#loop run for m times depending on m the error value\n",
-    "while test:            \n",
+    "while test:         \n",
     "    x = seidel(a, x, b)\n",
     "    #print each time the updated solution\n",
-    "    print(x)\n",
+    "    print(\"x\",x)\n",
     "    i=0\n",
     "    while(test and i<n):\n",
-    "        if(x[i]<=epsilon):\n",
+    "        if(abs(x1[i]-x[i])<=epsilon):\n",
     "            test=False\n",
     "            break\n",
-    "        i=i+1"
+    "        i=i+1\n",
+    "    x1=copy.copy(x)"
    ]
   },
   {
