retouche du code

--- a/gauss seidel.ipynb
+++ b/gauss seidel.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x [-0.2, 0.15555555555555556, -0.5079365079365079]\n",
-      "x [0.16698412698412696, 0.33432098765432094, -0.42862181909800956]\n",
-      "x [0.19090148652053412, 0.3334806976288458, -0.4216682463696825]\n",
-      "x [0.18639322687334783, 0.33120532522108065, -0.4226312673534835]\n",
-      "x [0.18606089050052235, 0.3312015487616723, -0.4227256811086611]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Defining our function as seidel which takes 3 arguments\n",
     "# as A matrix, Solution and B matrix\n",
@@ -37,34 +25,90 @@
     "        x[j] = d / a[j][j]\n",
     "    # returning our updated solution           \n",
     "    return x    \n",
-    "   \n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "# int(input())input as number of variable to be solved                \n",
-    "#n = int(input(\"Donner nombre des variables\"))  \n",
+    "n = int(input(\"Donner nombre des variables\"))  \n",
     "a = []                            \n",
     "b = []\n",
     "x = []   \n",
     "epsilon = float(input(\"Donner l'epsilon\"))\n",
+    "max_iteration=int(input(\"donner max nombre d'itération\"))\n",
     "test=True\n",
-    "\"\"\"for i in range(n):\n",
+    "for i in range(n):\n",
     "    l=[]\n",
     "    for j in range(n):\n",
     "        l.append(int(input(\"Donner A{}{}\".format(i,j))))\n",
     "    a.append(l)                            \n",
     "for i in range(n):\n",
     "    b.append(int(input(\"Donner b{}\".format(i))))\n",
-    "    #b[i]=int(input(\"Donner b{}\".format(i)))\n",
-    "    x.append(0)\n",
-    "print(x)\"\"\"\n",
-    "# initial solution depending on n(here n=3)                     \n",
+    "    x.append(0.0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0, 0.0]\n",
+      "[0.0, 0.0]\n",
+      "x [0.5, 0.25]\n",
+      "x [0.0, 0.5]\n",
+      "x [-0.5, 0.75]\n",
+      "x [-1.0, 1.0]\n",
+      "x [-1.5, 1.25]\n",
+      "x [-2.0, 1.5]\n",
+      "x [-2.5, 1.75]\n",
+      "x [-3.0, 2.0]\n",
+      "x [-3.5, 2.25]\n",
+      "x [-4.0, 2.5]\n",
+      "x [-4.5, 2.75]\n",
+      "x [-5.0, 3.0]\n",
+      "x [-5.5, 3.25]\n",
+      "x [-6.0, 3.5]\n",
+      "x [-6.5, 3.75]\n",
+      "x [-7.0, 4.0]\n",
+      "x [-7.5, 4.25]\n",
+      "x [-8.0, 4.5]\n",
+      "x [-8.5, 4.75]\n",
+      "x [-9.0, 5.0]\n",
+      "x [-9.5, 5.25]\n",
+      "x [-10.0, 5.5]\n",
+      "x [-10.5, 5.75]\n",
+      "x [-11.0, 6.0]\n",
+      "x [-11.5, 6.25]\n",
+      "x [-12.0, 6.5]\n"
+     ]
+    }
+   ],
+   "source": [
     "import copy\n",
+    "x1=copy.copy(x)\n",
+    "print(x)\n",
+    "print(x1)\n",
+    "# initial solution depending on n(here n=3)                     \n",
+    "\n",
     "#dummy data\n",
-    "n=3\n",
+    "\"\"\"n=3\n",
     "x = [0.0, 0.0, 0.0]                         \n",
     "a = [[5, -2, 3],[-3, 9, 1],[2, -1, -7]]\n",
     "b = [-1,2,3]\n",
-    "x1 = [0.0, 0.0, 0.0]\n",
+    "x1 = [0.0, 0.0, 0.0]\"\"\"\n",
     "#loop run for m times depending on m the error value\n",
-    "while test:         \n",
+    "k=0\n",
+    "while test and k<=max_iteration:         \n",
     "    x = seidel(a, x, b)\n",
     "    #print each time the updated solution\n",
     "    print(\"x\",x)\n",
@@ -74,7 +118,8 @@
     "            test=False\n",
     "            break\n",
     "        i=i+1\n",
-    "    x1=copy.copy(x)"
+    "    x1=copy.copy(x)\n",
+    "    k+=1"
    ]
   },
   {
