--- a/gauss seidel.ipynb
+++ b/gauss seidel.ipynb
@@ -2,116 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Defining our function as seidel which takes 3 arguments\n",
-    "# as A matrix, Solution and B matrix\n",
-    "   \n",
     "def seidel(a, x ,b):\n",
-    "    #Finding length of a      \n",
     "    n = len(a)              \n",
-    "    # for loop for n times as to calculate x, y , z\n",
     "    for j in range(n):        \n",
-    "        # temp variable d to store b[j]\n",
     "        d = b[j]                  \n",
-    "          \n",
-    "        # to calculate respective xi, yi, zi\n",
     "        for i in range(n):     \n",
     "            if(j != i):\n",
     "                d-=a[j][i] * x[i]\n",
-    "        # updating the value of our solution        \n",
     "        x[j] = d / a[j][j]\n",
-    "    # returning our updated solution           \n",
     "    return x    \n",
     "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# int(input())input as number of variable to be solved                \n",
-    "n = int(input(\"Donner nombre des variables\"))  \n",
+    "#saisie les données\n",
+    "n = int(input(\"Donner nombre des variables\"))\n",
+    "epsilon = float(input(\"Donner l'epsilon\"))\n",
+    "max_iteration=int(input(\"donner max nombre d'itération\"))\n",
     "a = []                            \n",
     "b = []\n",
     "x = []   \n",
-    "epsilon = float(input(\"Donner l'epsilon\"))\n",
-    "max_iteration=int(input(\"donner max nombre d'itération\"))\n",
     "test=True\n",
     "for i in range(n):\n",
     "    l=[]\n",
     "    for j in range(n):\n",
-    "        l.append(int(input(\"Donner A{}{}\".format(i,j))))\n",
+    "        l.append(int(input(\"Donner A{}{}\".format(i+1,j+1))))\n",
     "    a.append(l)                            \n",
     "for i in range(n):\n",
-    "    b.append(int(input(\"Donner b{}\".format(i))))\n",
-    "    x.append(0.0)\n"
+    "    b.append(int(input(\"Donner b{}\".format(i+1))))\n",
+    "    x.append(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.0, 0.0]\n",
-      "[0.0, 0.0]\n",
-      "x [0.5, 0.25]\n",
-      "x [0.0, 0.5]\n",
-      "x [-0.5, 0.75]\n",
-      "x [-1.0, 1.0]\n",
-      "x [-1.5, 1.25]\n",
-      "x [-2.0, 1.5]\n",
-      "x [-2.5, 1.75]\n",
-      "x [-3.0, 2.0]\n",
-      "x [-3.5, 2.25]\n",
-      "x [-4.0, 2.5]\n",
-      "x [-4.5, 2.75]\n",
-      "x [-5.0, 3.0]\n",
-      "x [-5.5, 3.25]\n",
-      "x [-6.0, 3.5]\n",
-      "x [-6.5, 3.75]\n",
-      "x [-7.0, 4.0]\n",
-      "x [-7.5, 4.25]\n",
-      "x [-8.0, 4.5]\n",
-      "x [-8.5, 4.75]\n",
-      "x [-9.0, 5.0]\n",
-      "x [-9.5, 5.25]\n",
-      "x [-10.0, 5.5]\n",
-      "x [-10.5, 5.75]\n",
-      "x [-11.0, 6.0]\n",
-      "x [-11.5, 6.25]\n",
-      "x [-12.0, 6.5]\n"
+      "[-0.2, 0.15555555555555556, -0.5079365079365079]\n",
+      "[0.16698412698412696, 0.33432098765432094, -0.42862181909800956]\n",
+      "[0.19090148652053412, 0.3334806976288458, -0.4216682463696825]\n",
+      "[0.18639322687334783, 0.33120532522108065, -0.4226312673534835]\n",
+      "[0.18606089050052235, 0.3312015487616723, -0.4227256811086611]\n",
+      "[0.18611602816986558, 0.33123041840202866, -0.4227140517231854]\n",
+      "[0.1861205983947227, 0.3312306496563726, -0.4227127789809896]\n"
      ]
     }
    ],
    "source": [
     "import copy\n",
     "x1=copy.copy(x)\n",
-    "print(x)\n",
-    "print(x1)\n",
-    "# initial solution depending on n(here n=3)                     \n",
-    "\n",
-    "#dummy data\n",
-    "\"\"\"n=3\n",
-    "x = [0.0, 0.0, 0.0]                         \n",
-    "a = [[5, -2, 3],[-3, 9, 1],[2, -1, -7]]\n",
-    "b = [-1,2,3]\n",
-    "x1 = [0.0, 0.0, 0.0]\"\"\"\n",
-    "#loop run for m times depending on m the error value\n",
-    "k=0\n",
-    "while test and k<=max_iteration:         \n",
+    "while test and max_iteration>0:\n",
     "    x = seidel(a, x, b)\n",
-    "    #print each time the updated solution\n",
-    "    print(\"x\",x)\n",
+    "    #on va afficher le résultat pour chaque itération\n",
+    "    print(x)\n",
     "    i=0\n",
     "    while(test and i<n):\n",
     "        if(abs(x1[i]-x[i])<=epsilon):\n",
@@ -119,15 +75,8 @@
     "            break\n",
     "        i=i+1\n",
     "    x1=copy.copy(x)\n",
-    "    k+=1"
+    "    max_iteration-=1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
